--- a/public/locales/kz/translation.json
+++ b/public/locales/kz/translation.json
@@ -1,6 +1,18 @@
 {
   "news": "Жаңалықтар",
   "search": "Іздеу",
-  "info": "Толық ақпарат"
+  "info": "Толық ақпарат",
+  "enter_email": "Электрондық поштаны енгізіңіз",
+  "enter_password": "Құпия сөзді енгізіңіз",
+  "forgot_password": "Құпия сөзді ұмыттыңыз ба?",
+  "loading...": "Жүктелуде...",
+  "login": "Кіру",
+  "enter_name": "Атыңызды енгізіңіз",
+  "enter_surname": "Тегіңізді енгізіңіз",
+  "enter_phone_number": "Телефон нөмірін енгізіңіз",
+  "confirm_password": "Құпиясөзді растаңыз",
+  "register": "Тіркелу",
+  "passwords_do_not_match": "Құпиясөздер сәйкес келмейді"
+
 }
   
