--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -18,6 +18,8 @@
   "settings": "Settings",
   "privacy_rules": "Privacy Policy and terms of use",
   "tech_support": "Technical support",
-  "logout": "Logout"
+  "logout": "Logout",
+  "categories": "Categories",
+  "favorites": "Favorites"
 }
   
