--- a/public/locales/kz/translation.json
+++ b/public/locales/kz/translation.json
@@ -18,6 +18,8 @@
   "settings": "Параметрлер",
   "privacy_rules": "Құпиялылық саясаты және пайдалану шарттары",
   "tech_support": "Техникалық қолдау",
-  "logout": "Шығу"
+  "logout": "Шығу",
+  "categories": "Санаттар",
+  "favorites": "Таңдаулар"
 }
   
