--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -18,6 +18,8 @@
   "settings": "Параметры",
   "privacy_rules": "Политика конфиденциальности и условия использования",
   "tech_support": "Техническая поддержка",
-  "logout": "Выйти"
+  "logout": "Выйти",
+  "categories": "Категории",
+  "favorites": "Избранные"
 }
   
