--- a/public/locales/kz/translation.json
+++ b/public/locales/kz/translation.json
@@ -20,6 +20,24 @@
   "tech_support": "Техникалық қолдау",
   "logout": "Шығу",
   "categories": "Санаттар",
-  "favorites": "Таңдаулар"
+  "favorites": "Таңдаулар",
+  "charity_for_categories": "Demeu қайырымдылыққа арналған санаттар",
+  "description": "Адамдардың Demeu-де қаражат жинаудың кейбір тәсілдерін зерттеңіз.",
+  "medical": "Медициналық",
+  "emergency": "Төтенше жағдай",
+  "charity": "Қайырымдылық",
+  "education": "Білім беру саласы",
+  "ecology": "Экологиялық",
+  "sports": "Спорт",
+  "animals": "Жануарлар",
+  "cancer": "Қатерлі ісік",
+  "general_fundraising": "Жалпы қаражат жинау",
+  "share_message": "\uD83E\uDD1D Жақсылықпен бөліс! \uD83E\uDDE1 Қайырымдылық науқанымызды қолдап, көмегіңізге мұқтаж жандарға көмектесіңіз. ✨ Толық ақпарат алу үшін мына сілтемеге өтіңіз:",
+  "copy_link": "Сілтемені көшіру",
+  "share": "Бөлісу",
+  "link_copied_success": "Сілтеме сәтті көшірілді!",
+  "link_copied_failure": "Сілтемені көшіру сәтсіз аяқталды. Қайталап көріңіз.",
+  "share_description": "Жазбамен бөлісіп, көмекке үлес қосыңыз!",
+  "footer_text": "Бұл жазбаны бөлісу арқылы сіз қайырымды жандарға көмек қажет екенін хабарлай аласыз. Бір бөлісу – бір үміт!"
 }
   
