--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -20,6 +20,24 @@
   "tech_support": "Техническая поддержка",
   "logout": "Выйти",
   "categories": "Категории",
-  "favorites": "Избранные"
+  "favorites": "Избранные",
+  "charity_for_categories": "Категории для благотворительности на Demeu",
+  "description": "Исследуйте способы сбора средств на Demeu.",
+  "medical": "Медицинская помощь",
+  "emergency": "Чрезвычайные ситуации",
+  "charity": "Благотворительность",
+  "education": "Образование",
+  "ecology": "Экология",
+  "sports": "Спорт",
+  "animals": "Животные",
+  "cancer": "Рак",
+  "general_fundraising": "Общий сбор средств",
+  "share_message": "🤝 Поделитесь добром! 🧡 Поддержите нашу благотворительную кампанию и помогите тем, кто нуждается в вашей помощи. ✨ Узнайте подробности по ссылке:",
+  "copy_link": "Копировать ссылку",
+  "share": "Поделиться",
+  "link_copied_success": "Ссылка успешно скопирована!",
+  "link_copied_failure": "Не удалось скопировать ссылку. Попробуйте еще раз.",
+  "share_description": "Поделитесь публикацией и помогите!",
+  "footer_text": "Поделившись этим постом, вы дадите знать добросердечным людям, что нужна помощь. Один поделился – одна надежда!"
 }
   
