--- a/public/locales/kz/translation.json
+++ b/public/locales/kz/translation.json
@@ -38,6 +38,8 @@
   "link_copied_success": "Сілтеме сәтті көшірілді!",
   "link_copied_failure": "Сілтемені көшіру сәтсіз аяқталды. Қайталап көріңіз.",
   "share_description": "Жазбамен бөлісіп, көмекке үлес қосыңыз!",
-  "footer_text": "Бұл жазбаны бөлісу арқылы сіз қайырымды жандарға көмек қажет екенін хабарлай аласыз. Бір бөлісу – бір үміт!"
+  "footer_text": "Бұл жазбаны бөлісу арқылы сіз қайырымды жандарға көмек қажет екенін хабарлай аласыз. Бір бөлісу – бір үміт!",
+  "reset_password": "Құпия сөзді қалпына келтіру",
+  "close": "Жабу"
 }
   
