--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -38,6 +38,8 @@
   "link_copied_success": "Ссылка успешно скопирована!",
   "link_copied_failure": "Не удалось скопировать ссылку. Попробуйте еще раз.",
   "share_description": "Поделитесь публикацией и помогите!",
-  "footer_text": "Поделившись этим постом, вы дадите знать добросердечным людям, что нужна помощь. Один поделился – одна надежда!"
+  "footer_text": "Поделившись этим постом, вы дадите знать добросердечным людям, что нужна помощь. Один поделился – одна надежда!",
+  "reset_password": "Сброс пароля",
+  "close": "Закрыть"
 }
   
