--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -38,6 +38,8 @@
   "link_copied_success": "Link copied successfully!",
   "link_copied_failure": "Failed to copy link. Please try again.",
   "share_description": "Share the post and help!",
-  "footer_text": "Sharing this post will help notify kind people about those who need support. One share – one hope!"
+  "footer_text": "Sharing this post will help notify kind people about those who need support. One share – one hope!",
+  "reset_password": "Reset Password",
+  "close": "Close"
 }
   
