--- a/public/locales/kz/translation.json
+++ b/public/locales/kz/translation.json
@@ -38,6 +38,25 @@
   "link_copied_success": "Сілтеме сәтті көшірілді!",
   "link_copied_failure": "Сілтемені көшіру сәтсіз аяқталды. Қайталап көріңіз.",
   "share_description": "Жазбамен бөлісіп, көмекке үлес қосыңыз!",
-  "footer_text": "Бұл жазбаны бөлісу арқылы сіз қайырымды жандарға көмек қажет екенін хабарлай аласыз. Бір бөлісу – бір үміт!"
+  "footer_text": "Бұл жазбаны бөлісу арқылы сіз қайырымды жандарға көмек қажет екенін хабарлай аласыз. Бір бөлісу – бір үміт!",
+  "email": "Email",
+  "phone": "Телефон",
+  "birth_date": "Туған күн",
+  "create_post": "Пост Жасау",
+  "not_provided": "Не указан",
+  "update": "Жаңарту",
+  "first_name": "Есіміңіз",
+  "last_name": "Тегіңіз",
+  "email": "Email почтаңыз",
+  "phone": "Телефон нөміріңіз",
+  "birth_date": "Туған күн",
+  "country": "Еліңіз",
+  "region": "Облыс",
+  "choose_country": "Выберите страну",
+  "choose_region": "Выберите область",
+  "social_networks": "Әлеуметтік желілер",
+  "additional_info": "Қосымша ақпарат",
+  "save": "Сақтау",
+  "upload_photo": "Сурет жаңарту"
 }
   
