--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -38,6 +38,25 @@
   "link_copied_success": "Ссылка успешно скопирована!",
   "link_copied_failure": "Не удалось скопировать ссылку. Попробуйте еще раз.",
   "share_description": "Поделитесь публикацией и помогите!",
-  "footer_text": "Поделившись этим постом, вы дадите знать добросердечным людям, что нужна помощь. Один поделился – одна надежда!"
+  "footer_text": "Поделившись этим постом, вы дадите знать добросердечным людям, что нужна помощь. Один поделился – одна надежда!",
+  "email": "Электронная почта",
+  "phone": "Телефон",
+  "birth_date": "Дата рождения",
+  "create_post": "Создать пост",
+  "not_provided": "Не указано",
+  "update": "Обновление",
+  "first_name": "Имя",
+  "last_name": "Фамилия",
+  "email": "Email",
+  "phone": "Номер телефона",
+  "birth_date": "Дата рождения",
+  "country": "Страна",
+  "region": "Регион",
+  "choose_country": "Выберите страну",
+  "choose_region": "Выберите область",
+  "social_networks": "Социальные сети",
+  "additional_info": "Дополнительная информация",
+  "save": "Сохранить",
+  "upload_photo": "Обновить фото"
 }
   
