create post finished

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -23,7 +23,7 @@
   "favorites": "Favorites",
   "charity_for_categories": "Charity Categories on Demeu",
   "description": "Explore ways to raise funds on Demeu.",
-  "medical": "Medical",
+  "medicine": "Medical",
   "emergency": "Emergency",
   "charity": "Charity",
   "education": "Education",
@@ -31,7 +31,7 @@
   "sports": "Sports",
   "animals": "Animals",
   "cancer": "Cancer",
-  "general_fundraising": "General Fundraising",
+  "general": "General Fundraising",
   "share_message": "\uD83E\uDD1D Share the good! \uD83E\uDDE1 Support our charity campaign and help those who need your help. ✨ For details, follow the link:",
   "copy_link": "Copy link",
   "share": "Share",
@@ -40,6 +40,48 @@
   "share_description": "Share the post and help!",
   "footer_text": "Sharing this post will help notify kind people about those who need support. One share – one hope!",
   "reset_password": "Reset Password",
-  "close": "Close"
+  "close": "Close",
+  "select_category": "Select a category",
+  "create_post": "Create a Post",
+  "post_title": "Post Title",
+  "category": "Category",
+  "select_category": "Select a category",
+  "upload_images_videos": "Upload Images and Videos",
+  "description": "Description",
+  "bank_details_amount": "Enter Bank Details and Required Amount",
+  "contact_info": "Contact Information",
+  "publication_created_successfully": "Publication successfully created!",
+  "loading": "Loading...",
+  "submit_post": "Submit Post",
+  "add_photo_or_video": "Add photo or video",
+  "drag_or_click": "Drag files here or click to upload",
+  "add_more": "Add more",
+  "enter_description": "Enter a description",
+  "enter_amount": "Enter the required amount",
+  "enter_number": "Enter your phone number",
+  "main_photo": "Main photo",
+  "delete": "Delete",
+  "confirm_delete": "Are you sure you want to delete?",
+  "upload_success": "File uploaded successfully",
+  "upload_failed": "File upload failed",
+  "invalid_file_format": "Invalid file format",
+  "max_files_reached": "Maximum number of files reached",
+  "max_size_exceeded": "File size exceeds the maximum allowed",
+  "payment_info": "Payment Information",
+  "submit": "Submit",
+  "cancel": "Cancel",
+  "next": "Next",
+  "previous": "Previous",
+  "search_placeholder": "Search...",
+  "no_results_found": "No results found",
+  "confirm_action": "Are you sure?",
+  "save_changes": "Save changes",
+  "edit": "Edit",
+  "view_details": "View details",
+  "error_occurred": "An error occurred",
+  "success": "Success",
+  "retry": "Retry",
+  "upload_limit_exceeded": "Upload limit exceeded",
+  "error_creating_publication": "Error in creating publication"
 }
   
