--- a/public/locales/kz/translation.json
+++ b/public/locales/kz/translation.json
@@ -23,7 +23,7 @@
   "favorites": "Таңдаулар",
   "charity_for_categories": "Demeu қайырымдылыққа арналған санаттар",
   "description": "Адамдардың Demeu-де қаражат жинаудың кейбір тәсілдерін зерттеңіз.",
-  "medical": "Медициналық",
+  "medicine": "Медициналық",
   "emergency": "Төтенше жағдай",
   "charity": "Қайырымдылық",
   "education": "Білім беру саласы",
@@ -31,7 +31,7 @@
   "sports": "Спорт",
   "animals": "Жануарлар",
   "cancer": "Қатерлі ісік",
-  "general_fundraising": "Жалпы қаражат жинау",
+  "general": "Жалпы қаражат жинау",
   "share_message": "\uD83E\uDD1D Жақсылықпен бөліс! \uD83E\uDDE1 Қайырымдылық науқанымызды қолдап, көмегіңізге мұқтаж жандарға көмектесіңіз. ✨ Толық ақпарат алу үшін мына сілтемеге өтіңіз:",
   "copy_link": "Сілтемені көшіру",
   "share": "Бөлісу",
@@ -40,6 +40,41 @@
   "share_description": "Жазбамен бөлісіп, көмекке үлес қосыңыз!",
   "footer_text": "Бұл жазбаны бөлісу арқылы сіз қайырымды жандарға көмек қажет екенін хабарлай аласыз. Бір бөлісу – бір үміт!",
   "reset_password": "Құпия сөзді қалпына келтіру",
-  "close": "Жабу"
+  "close": "Жабу",
+  "select_category": "Санатты таңдаңыз",
+  "create_post": "Пост жасау",
+  "post_title": "Хабарландыру тақырыбы",
+  "category": "Санат",
+  "select_category": "Санатты таңдаңыз",
+  "upload_images_videos": "Сурет және видео жүктеу",
+  "description": "Сипаттама",
+  "bank_details_amount": "Банк реквизиттерін енгізіңіз және қажетті соманы жазыңыз",
+  "contact_info": "Байланыс ақпараты",
+  "publication_created_successfully": "Хабарландыру сәтті жасалды!",
+  "loading": "Жүктелуде...",
+  "submit_post": "Жариялау",
+  "add_photo_or_video": "Фото немесе видео қосу",
+  "drag_or_click": "Файлдарды осында сүйреңіз немесе жүктеу үшін басыңыз",
+  "add_more": "Қосымша қосу",
+  "enter_description": "Сипаттаманы енгізіңіз",
+  "enter_amount": "Қажетті соманы енгізіңіз",
+  "enter_number": "Телефон нөмірін енгізіңіз",
+  "main_photo": "Негізгі фото",
+  "delete": "Өшіру",
+  "confirm_delete": "Өшіруге сенімдісіз бе?",
+  "upload_success": "Файл сәтті жүктелді",
+  "upload_failed": "Файлды жүктеу қатесі",
+  "invalid_file_format": "Файл форматы дұрыс емес",
+  "max_files_reached": "Файлдардың максималды санына жетті",
+  "max_size_exceeded": "Файл өлшемі рұқсат етілгеннен үлкен",
+  "payment_info": "Төлем ақпараты",
+  "submit": "Жіберу",
+  "cancel": "Болдырмау",
+  "next": "Келесі",
+  "previous": "Артқа",
+  "required_field": "Бұл өріс толтырылуы қажет",
+  "please_wait": "Күте тұрыңыз...",
+  "successfully_saved": "Сәтті сақталды",
+  "error_occurred": "Қате орын алды"
 }
   
