--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -23,7 +23,7 @@
   "favorites": "Избранные",
   "charity_for_categories": "Категории для благотворительности на Demeu",
   "description": "Исследуйте способы сбора средств на Demeu.",
-  "medical": "Медицинская помощь",
+  "medicine": "Медицинская помощь",
   "emergency": "Чрезвычайные ситуации",
   "charity": "Благотворительность",
   "education": "Образование",
@@ -31,7 +31,7 @@
   "sports": "Спорт",
   "animals": "Животные",
   "cancer": "Рак",
-  "general_fundraising": "Общий сбор средств",
+  "general": "Общий сбор средств",
   "share_message": "🤝 Поделитесь добром! 🧡 Поддержите нашу благотворительную кампанию и помогите тем, кто нуждается в вашей помощи. ✨ Узнайте подробности по ссылке:",
   "copy_link": "Копировать ссылку",
   "share": "Поделиться",
@@ -40,6 +40,42 @@
   "share_description": "Поделитесь публикацией и помогите!",
   "footer_text": "Поделившись этим постом, вы дадите знать добросердечным людям, что нужна помощь. Один поделился – одна надежда!",
   "reset_password": "Сброс пароля",
-  "close": "Закрыть"
+  "close": "Закрыть",
+  "select_category": "Выберите категорию",
+  "create_post": "Создать публикацию",
+  "post_title": "Заголовок поста",
+  "category": "Категория",
+  "select_category": "Выберите категорию",
+  "upload_images_videos": "Загрузить изображения и видео",
+  "description": "Описание",
+  "bank_details_amount": "Введите банковские реквизиты и необходимую сумму",
+  "contact_info": "Контактная информация",
+  "publication_created_successfully": "Публикация успешно создана!",
+  "loading": "Загрузка...",
+  "submit_post": "Опубликовать",
+  "add_photo_or_video": "Добавить фото или видео",
+  "drag_or_click": "Перетащите файлы сюда или нажмите для загрузки",
+  "add_more": "Добавить еще",
+  "enter_description": "Введите описание",
+  "enter_amount": "Введите необходимую сумму",
+  "enter_number": "Введите номер телефона",
+  "main_photo": "Главное фото",
+  "delete": "Удалить",
+  "confirm_delete": "Вы уверены, что хотите удалить?",
+  "upload_success": "Файл успешно загружен",
+  "upload_failed": "Ошибка загрузки файла",
+  "invalid_file_format": "Неверный формат файла",
+  "max_files_reached": "Достигнуто максимальное количество файлов",
+  "max_size_exceeded": "Размер файла превышает допустимый",
+  "payment_info": "Платежная информация",
+  "submit": "Отправить",
+  "cancel": "Отмена",
+  "next": "Далее",
+  "previous": "Назад",
+  "required_field": "Это поле обязательно для заполнения",
+  "please_wait": "Пожалуйста, подождите...",
+  "successfully_saved": "Успешно сохранено",
+  "error_occurred": "Произошла ошибка"
+
 }
   
