--- a/public/locales/kz/translation.json
+++ b/public/locales/kz/translation.json
@@ -18,6 +18,7 @@
   "settings": "Параметрлер",
   "privacy_rules": "Құпиялылық саясаты және пайдалану шарттары",
   "tech_support": "Техникалық қолдау",
+  "contact_us": "Бізбен байланысу",
   "logout": "Шығу",
   "categories": "Санаттар",
   "favorites": "Таңдаулар",
@@ -47,7 +48,6 @@
   "update": "Жаңарту",
   "first_name": "Есіміңіз",
   "last_name": "Тегіңіз",
-  "email": "Email почтаңыз",
   "phone": "Телефон нөміріңіз",
   "birth_date": "Туған күн",
   "country": "Еліңіз",
@@ -57,6 +57,14 @@
   "social_networks": "Әлеуметтік желілер",
   "additional_info": "Қосымша ақпарат",
   "save": "Сақтау",
-  "upload_photo": "Сурет жаңарту"
+  "upload_photo": "Сурет жаңарту",
+  "contact_us": "Бізбен хабарласыңыз",
+  "contact_subtitle": "Сұрақтарыңыз болса, біз әрқашан жауап беруге дайынбыз.",
+  "subject": "Тақырыбы",
+  "full_name": "Аты-жөні",
+  "message": "Түсініктеме",
+  "message_placeholder": "Пікіріңізді қалдырыңыз",
+  "upload_file": "Файлды жүктеу",
+  "send": "Жіберу"
 }
   
