--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -18,6 +18,7 @@
   "settings": "Параметры",
   "privacy_rules": "Политика конфиденциальности и условия использования",
   "tech_support": "Техническая поддержка",
+  "contact_us": "Связаться с нами",
   "logout": "Выйти",
   "categories": "Категории",
   "favorites": "Избранные",
@@ -47,7 +48,6 @@
   "update": "Обновление",
   "first_name": "Имя",
   "last_name": "Фамилия",
-  "email": "Email",
   "phone": "Номер телефона",
   "birth_date": "Дата рождения",
   "country": "Страна",
@@ -57,6 +57,14 @@
   "social_networks": "Социальные сети",
   "additional_info": "Дополнительная информация",
   "save": "Сохранить",
-  "upload_photo": "Обновить фото"
+  "upload_photo": "Обновить фото",
+  "contact_us": "Свяжитесь с нами",
+  "contact_subtitle": "Если у вас есть вопросы, мы всегда готовы ответить.",
+  "subject": "Тема",
+  "full_name": "Полное имя",
+  "message": "Сообщение",
+  "message_placeholder": "Оставьте ваше сообщение",
+  "upload_file": "Загрузить файл",
+  "send": "Отправить"
 }
   
