about_us finished

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -110,6 +110,35 @@
   "success": "Success",
   "retry": "Retry",
   "upload_limit_exceeded": "Upload limit exceeded",
-  "error_creating_publication": "Error in creating publication"
+  "error_creating_publication": "Error in creating publication",
+  "hero_title": "Demeu – Let’s be a support for everyone",
+  "hero_description": "In Kazakh, the word \"demeu\" means \"support\", \"pillar\". We created this project to become a reliable support for those in need. Through our platform, every person can find the help they need, and donors can contribute through a transparent system.",
+  "values_title": "Our Values",
+  "value_transparency": "Transparency",
+  "value_transparency_desc": "All processes are fully transparent, and each action is monitored in our system.",
+  "value_reliability": "Reliability",
+  "value_reliability_desc": "Our system is equipped with verification mechanisms.",
+  "value_cooperation": "Cooperation",
+  "value_cooperation_desc": "We help by uniting people.",
+  "how_it_works": "How we work?",
+  "stats_people_helped": "people received help.",
+  "stats_money_collected": "funds collected.",
+  "stats_donors": "donors with us.",
+  "footer_intro": "Demeu – a platform aimed at making charity accessible to everyone. We strive to improve our society by bringing people together.",
+  "footer_links": "Our main links:",
+  "footer_news": "News",
+  "footer_search": "Search",
+  "footer_categories": "Categories",
+  "footer_copyright": "© 2025 Demeu. All rights reserved.",
+  "footer_terms": "Terms of Use",
+  "footer_help": "Help",
+  "footer_request": "Submit a request",
+  "footer_supporters": "Our main supporters:",
+  "footer_kaspi": "Kaspi.kz",
+  "footer_beeline": "Beeline",
+  "footer_halyk": "Halyk Bank",
+  "footer_contact": "Contact Information:",
+  "footer_email": "Email: support@demeu.kz",
+  "footer_phone": "Phone: +7 (XXX) XXX-XX-XX"
 }
   
