--- a/public/locales/kz/translation.json
+++ b/public/locales/kz/translation.json
@@ -103,6 +103,35 @@
   "please_wait": "Күте тұрыңыз...",
   "successfully_saved": "Сәтті сақталды",
   "error_occurred": "Қате орын алды",
-  "error_creating_publication": "Хабарландыруды жасау аясында қателік орын алды"
+  "error_creating_publication": "Хабарландыруды жасау аясында қателік орын алды",
+  "hero_title": "Demeu – әрбір адамға тірек болайық",
+  "hero_description": "Қазақ тілінде \"демеу\" сөзі \"қолдау\", \"тірек\" деген мағынаны білдіреді. Біз осы атаумен жоба құрып, көмекке зәру жандар үшін сенімді тірек болғымыз келеді. Біздің платформамыз арқылы әрбір адам өзіне қажетті қолдау таба алады, ал көмек көрсетушілер сенімді және ашық жүйе арқылы өз үлесін қоса алады.",
+  "values_title": "Біздің құндылықтар",
+  "value_transparency": "Ашықтық",
+  "value_transparency_desc": "Барлық процесс толық ашық, әрбір жұмыс біздің жүйеде қадағаланады.",
+  "value_reliability": "Сенімділік",
+  "value_reliability_desc": "Жүйеміз тексеру механизмдерімен жабдықталған.",
+  "value_cooperation": "Ынтымақтастық",
+  "value_cooperation_desc": "Біз адамдарды біріктіру арқылы көмек көрсетеміз.",
+  "how_it_works": "Біз қалай жұмыс жасаймыз?",
+  "stats_people_helped": "адам көмек алды.",
+  "stats_money_collected": "қаражат жиналды.",
+  "stats_donors": "қайырымды жан бізбен бірге.",
+  "footer_intro": "Demeu – қайырымдылықты баршаға қолжетімді етуге бағытталған платформа. Біз адамдарды біріктіру арқылы қоғамымызды жақсартуға тырысамыз.",
+  "footer_links": "Біздің басты сілтемелер:",
+  "footer_news": "Жаңалықтар",
+  "footer_search": "Іздеу",
+  "footer_categories": "Санаттар",
+  "footer_copyright": "© 2025 Demeu. Барлық құқықтар қорғалған.",
+  "footer_terms": "Пайдалану ережелері",
+  "footer_help": "Көмек көрсету",
+  "footer_request": "Өтініш қалдыру",
+  "footer_supporters": "Біздің басты қолдаушылар:",
+  "footer_kaspi": "Kaspi.kz",
+  "footer_beeline": "Beeline",
+  "footer_halyk": "Halyk Bank",
+  "footer_contact": "Байланыс ақпараттары:",
+  "footer_email": "Электрондық пошта: support@demeu.kz",
+  "footer_phone": "Телефон: +7 (XXX) XXX-XX-XX"
 }
   
