--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -103,6 +103,35 @@
   "please_wait": "Пожалуйста, подождите...",
   "successfully_saved": "Успешно сохранено",
   "error_occurred": "Произошла ошибка",
-  "error_creating_publication": "Произошла ошибка при создании публикации"
+  "error_creating_publication": "Произошла ошибка при создании публикации",
+  "hero_title": "Demeu – давайте станем опорой для каждого человека",
+  "hero_description": "В казахском языке слово \"демеу\" означает \"поддержка\", \"опора\". Мы создали этот проект, чтобы стать надежной поддержкой для нуждающихся. На нашей платформе каждый человек может найти необходимую помощь, а благотворители могут внести свой вклад через надежную систему.",
+  "values_title": "Наши ценности",
+  "value_transparency": "Прозрачность",
+  "value_transparency_desc": "Все процессы полностью прозрачны, каждая работа контролируется в нашей системе.",
+  "value_reliability": "Надежность",
+  "value_reliability_desc": "Наша система оснащена механизмами проверки.",
+  "value_cooperation": "Сотрудничество",
+  "value_cooperation_desc": "Мы помогаем, объединяя людей.",
+  "how_it_works": "Как мы работаем?",
+  "stats_people_helped": "человек получили помощь.",
+  "stats_money_collected": "средств собрано.",
+  "stats_donors": "благотворителей с нами.",
+  "footer_intro": "Demeu – платформа, направленная на то, чтобы благотворительность была доступна каждому. Мы стремимся улучшить наше общество, объединяя людей.",
+  "footer_links": "Наши основные ссылки:",
+  "footer_news": "Новости",
+  "footer_search": "Поиск",
+  "footer_categories": "Категории",
+  "footer_copyright": "© 2025 Demeu. Все права защищены.",
+  "footer_terms": "Условия использования",
+  "footer_help": "Помощь",
+  "footer_request": "Оставить заявку",
+  "footer_supporters": "Наши главные партнеры:",
+  "footer_kaspi": "Kaspi.kz",
+  "footer_beeline": "Beeline",
+  "footer_halyk": "Halyk Bank",
+  "footer_contact": "Контактная информация:",
+  "footer_email": "Электронная почта: support@demeu.kz",
+  "footer_phone": "Телефон: +7 (XXX) XXX-XX-XX"
 }
   
