google auth added

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -139,6 +139,8 @@
   "footer_halyk": "Halyk Bank",
   "footer_contact": "Contact Information:",
   "footer_email": "Email: support@demeu.kz",
-  "footer_phone": "Phone: +7 (XXX) XXX-XX-XX"
+  "footer_phone": "Phone: +7 (XXX) XXX-XX-XX",
+  "login_with_google": "Sign in with Google",
+  "or": "or"
 }
   
