--- a/public/locales/kz/translation.json
+++ b/public/locales/kz/translation.json
@@ -132,6 +132,8 @@
   "footer_halyk": "Halyk Bank",
   "footer_contact": "Байланыс ақпараттары:",
   "footer_email": "Электрондық пошта: support@demeu.kz",
-  "footer_phone": "Телефон: +7 (XXX) XXX-XX-XX"
+  "footer_phone": "Телефон: +7 (XXX) XXX-XX-XX",
+  "login_with_google": "Google арқылы кіру",
+  "or": "немесе"
 }
   
