--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -132,6 +132,8 @@
   "footer_halyk": "Halyk Bank",
   "footer_contact": "Контактная информация:",
   "footer_email": "Электронная почта: support@demeu.kz",
-  "footer_phone": "Телефон: +7 (XXX) XXX-XX-XX"
+  "footer_phone": "Телефон: +7 (XXX) XXX-XX-XX",
+  "login_with_google": "Войти через Google",
+  "or": "или"
 }
   
