--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -141,6 +141,30 @@
   "footer_email": "Email: support@demeu.kz",
   "footer_phone": "Phone: +7 (XXX) XXX-XX-XX",
   "login_with_google": "Sign in with Google",
-  "or": "or"
+  "or": "or",
+  "search_title": "Find the necessary information quickly",
+  "search_subtitle": "Here you can find announcements of people in need of help. Help improve lives!",
+  "search_placeholder": "Search by profile name or post title",
+  "filter_date": "Post creation date",
+  "filter_amount": "Fundraising amount",
+  "filter_from": "From",
+  "filter_to": "To",
+  "apply_filters": "Apply filter",
+  "loading": "Loading...",
+  "no_results": "No announcements found",
+  "sort_by": "Sort by:",
+  "sort_most_views": "Most views first",
+  "sort_least_views": "Least views first",
+  "goal": "Goal",
+  "collected": "Collected",
+  "help_now": "Help Now",
+  "medicine": "Medical",
+  "emergency": "Emergency",
+  "charity": "Charity",
+  "education": "Education",
+  "general": "General Fundraising",
+  "sports": "Sports",
+  "ecology": "Ecology",
+  "animals": "Animals"
 }
   
