--- a/public/locales/kz/translation.json
+++ b/public/locales/kz/translation.json
@@ -134,6 +134,30 @@
   "footer_email": "Электрондық пошта: support@demeu.kz",
   "footer_phone": "Телефон: +7 (XXX) XXX-XX-XX",
   "login_with_google": "Google арқылы кіру",
-  "or": "немесе"
+  "or": "немесе",
+  "search_title": "Қажетті деректі тез табыңыз",
+  "search_subtitle": "Бұл жерде көмекке зәру жандардың хабарландыруларын таба аласыз. Өмірді жақсартуға көмектесіңіз!",
+  "search_placeholder": "Профиль аты немесе пост атауы арқылы іздеңіз",
+  "filter_date": "Посттың жасалу уақыты",
+  "filter_amount": "Жиналу сомасы",
+  "filter_from": "От",
+  "filter_to": "До",
+  "apply_filters": "Фильтрді қолдану",
+  "loading": "Жүктелуде...",
+  "no_results": "Хабарландыру табылмады",
+  "sort_by": "Сортировать по:",
+  "sort_most_views": "Қаралым көптен азға",
+  "sort_least_views": "Қаралым аздан көпке",
+  "goal": "Мақсат",
+  "collected": "Жиналды",
+  "help_now": "Қазір көмектесу",
+  "medicine": "Медициналық",
+  "emergency": "Төтенше жағдай",
+  "charity": "Қайырымдылық",
+  "education": "Білім беру саласы",
+  "general": "Жалпы қаражат жинау",
+  "sports": "Спорт",
+  "ecology": "Экологиялық",
+  "animals": "Жануарлар"
 }
   
