--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -158,6 +158,7 @@
   "related_posts": "Related Posts",
   "no_posts": "No posts yet",
   "no_date": "No date provided",
-  "locale": "en-US"
+  "locale": "en-US",
+  "donateNow": "Donate Now"
 }
   
