--- a/public/locales/kz/translation.json
+++ b/public/locales/kz/translation.json
@@ -152,6 +152,7 @@
   "related_posts": "Ұқсас посттар",
   "no_posts": "Посттар әлі жоқ",
   "no_date": "Күні көрсетілмеген",
-  "locale": "kk-KZ"
+  "locale": "kk-KZ",
+  "donateNow": "Қазір көмектесу"
 }
   
