--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -152,6 +152,7 @@
   "related_posts": "Похожие посты",
   "no_posts": "Постов пока нет",
   "no_date": "Дата не указана",
-  "locale": "ru-RU"
+  "locale": "ru-RU",
+  "donateNow": "Помочь сейчас"
 }
   
