--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -176,13 +176,34 @@
   "goal": "Goal",
   "collected": "Collected",
   "help_now": "Help Now",
-  "medicine": "Medical",
-  "emergency": "Emergency",
-  "charity": "Charity",
-  "education": "Education",
-  "general": "General Fundraising",
-  "sports": "Sports",
-  "ecology": "Ecology",
-  "animals": "Animals"
+  "updatePost": "Update Post",
+  "title": "Title",
+  "chooseCategory": "Choose a category",
+  "upload_images": "Upload Images",
+  "amount": "Amount",
+  "bank_details": "Bank Details",
+  "contact_name": "Contact Name",
+  "contact_email": "Contact Email",
+  "contact_phone": "Contact Phone",
+  "categories_list": {
+    "medical": "Medical",
+    "emergency": "Emergency",
+    "charity": "Charity",
+    "education": "Education",
+    "animals": "Animals",
+    "environment": "Environment",
+    "sports": "Sports",
+    "general": "General fundraising"
+  },
+  "latest_donations": "Latest Donations",
+  "anonymous": "Anonymous Donor",
+  "unknown_date": "Unknown date",
+  "no_recent_donations": "No recent donations",
+  "posts": "Posts",
+  "donations": "Total Donations",
+  "saved_posts": "Saved Posts",
+  "full_info": "Full information",
+  "days_together": "{{count}} days with us",
+  "days_together_today": "With us from today"
 }
   
