--- a/public/locales/kz/translation.json
+++ b/public/locales/kz/translation.json
@@ -170,13 +170,34 @@
   "goal": "Мақсат",
   "collected": "Жиналды",
   "help_now": "Қазір көмектесу",
-  "medicine": "Медициналық",
-  "emergency": "Төтенше жағдай",
-  "charity": "Қайырымдылық",
-  "education": "Білім беру саласы",
-  "general": "Жалпы қаражат жинау",
-  "sports": "Спорт",
-  "ecology": "Экологиялық",
-  "animals": "Жануарлар"
+  "updatePost": "Постты жаңарту",
+  "title": "Тақырып",
+  "chooseCategory": "Санатты таңдаңыз",
+  "upload_images": "Суреттерді жүктеу",
+  "amount": "Сомасы",
+  "bank_details": "Банктік реквизиттер",
+  "contact_name": "Байланыс тұлғасы",
+  "contact_email": "Байланыс Email",
+  "contact_phone": "Байланыс телефоны",
+  "categories_list": {
+    "medical": "Медициналық",
+    "emergency": "Төтенше жағдай",
+    "charity": "Қайырымдылық",
+    "education": "Білім беру саласы",
+    "animals": "Жануарлар",
+    "environment": "Экологиялық",
+    "sports": "Спорт",
+    "general": "Жалпы қаражат жинау"
+  },
+  "latest_donations": "Соңғы донаттар",
+  "anonymous": "Анонимді донор",
+  "unknown_date": "Белгісіз күн",
+  "no_recent_donations": "Жақында донаттар жоқ",
+  "posts": "Пост",
+  "donations": "Донаттар сомасы",
+  "saved_posts": "Сақталған посттар",
+  "full_info": "Толық ақпарат",
+  "days_together": "{{count}} күн бізбен бірге",
+  "days_together_today": "Бүгіннен бастап бізбен бірге"
 }
   
