--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -170,13 +170,34 @@
   "goal": "Цель",
   "collected": "Собрано",
   "help_now": "Помочь сейчас",
-  "medicine": "Медицинская",
-  "emergency": "Чрезвычайная ситуация",
-  "charity": "Благотворительность",
-  "education": "Образование",
-  "general": "Общий сбор средств",
-  "sports": "Спорт",
-  "ecology": "Экология",
-  "animals": "Животные"
+  "updatePost": "Обновить пост",
+  "title": "Заголовок",
+  "chooseCategory": "Выберите категорию",
+  "upload_images": "Загрузить изображения",
+  "amount": "Сумма",
+  "bank_details": "Банковские реквизиты",
+  "contact_name": "Контактное лицо",
+  "contact_email": "Контактный Email",
+  "contact_phone": "Контактный телефон",
+  "categories_list": {
+    "medical": "Медицинская помощь",
+    "emergency": "Чрезвычайная ситуация",
+    "charity": "Благотворительность",
+    "education": "Образование",
+    "animals": "Животные",
+    "environment": "Экология",
+    "sports": "Спорт",
+    "general": "Общий сбор средств"
+  },
+  "latest_donations": "Последние донаты",
+  "anonymous": "Анонимный донор",
+  "unknown_date": "Неизвестная дата",
+  "no_recent_donations": "Нет недавних донатов",
+  "posts": "Посты",
+  "donations": "Сумма донатов",
+  "saved_posts": "Сохраненные посты",
+  "full_info": "Подробные информации",
+  "days_together": "{{count}} дней с нами",
+  "days_together_today": "С сегодняшнего дня с нами"
 }
   
