--- a/public/locales/kz/translation.json
+++ b/public/locales/kz/translation.json
@@ -198,6 +198,7 @@
   "saved_posts": "Сақталған посттар",
   "full_info": "Толық ақпарат",
   "days_together": "{{count}} күн бізбен бірге",
-  "days_together_today": "Бүгіннен бастап бізбен бірге"
+  "days_together_today": "Бүгіннен бастап бізбен бірге",
+  "are_you_sure_delete": "Сіз шынымен бұл жазбаны жойғыңыз келе ме?"
 }
   
