--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -204,6 +204,7 @@
   "saved_posts": "Saved Posts",
   "full_info": "Full information",
   "days_together": "{{count}} days with us",
-  "days_together_today": "With us from today"
+  "days_together_today": "With us from today",
+  "are_you_sure_delete": "Are you sure you want to delete this publication?"
 }
   
