--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -198,6 +198,7 @@
   "saved_posts": "Сохраненные посты",
   "full_info": "Подробные информации",
   "days_together": "{{count}} дней с нами",
-  "days_together_today": "С сегодняшнего дня с нами"
+  "days_together_today": "С сегодняшнего дня с нами",
+  "are_you_sure_delete": "Вы действительно хотите удалить эту публикацию?"
 }
   
